--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.19.4",
         "native-base": "^3.4.0",
         "react": "18.2.0",
         "react-native": "0.72.6",
