--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     },
     "dependencies": {
         "@react-native-async-storage/async-storage": "^1.19.4",
+        "@react-navigation/bottom-tabs": "^6.5.11",
+        "@react-navigation/native": "^6.1.9",
         "native-base": "^3.4.0",
         "react": "18.2.0",
         "react-native": "0.72.6",
-        "react-native-safe-area-context": "^3.3.2",
+        "react-native-safe-area-context": "^4.7.4",
+        "react-native-screens": "^3.27.0",
         "react-native-svg": "^12.1.1"
     },
     "devDependencies": {
