--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "native-base": "^3.4.0",
         "react": "18.2.0",
         "react-native": "0.72.6",
+        "react-native-config": "^1.5.1",
         "react-native-safe-area-context": "^4.7.4",
         "react-native-screens": "^3.27.0",
         "react-native-svg": "^12.1.1"
